@@ -36,7 +36,6 @@ import uk.gov.hmcts.reform.roleassignment.util.Constants;
 
 import javax.inject.Inject;
 import javax.sql.DataSource;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
@@ -108,7 +107,7 @@ public class RoleAssignmentCreateAndDeleteIntegrationTest extends BaseTest {
         String uid = "6b36bfc6-bb21-11ea-b3de-0242ac130006";
         UserRoles roles = UserRoles.builder()
             .uid(uid)
-            .roles(Arrays.asList("caseworker", "am-import"))
+            .roles(List.of("caseworker", "am-import"))
             .build();
 
         doReturn(roles).when(idamRoleService).getUserRoles(anyString());
